--- a/style.css
+++ b/style.css
@@ -1,1 +1,2 @@
 img {display: block;margin-left: auto;margin-right: auto;width: 50%;}
+div.heading {margin: auto; width: 90%; padding: 10px; text-align: center;}
