--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-img {display: block;margin-left: auto;margin-right: auto;width: 50%;}
+img {display: block; width: 50%;}
 div.heading {margin: auto; width: 90%; padding: 10px; text-align: center;}
 div.intro{ margin-left: 25px;padding: 5px;
 }
@@ -6,3 +6,5 @@ div.intro{ margin-left: 25px;padding: 5px;
 div.eqint { margin-left: 25px; padding: 5px;}
 div.natbrk {margin-left: 25px; padding: 5px;}
 div.qtl{margin-left: 25px; margin-bottom: 90px; padding: 5px;}
+
+h3.eqint {font-style: italic;}
