--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-img.equint {display: block;margin: 25px; width: 50%;}
-img.natbrk { display: inline-block; margin-left: 25px; width: 50%;}
-img.qtl { display: contents;margin-left: 25px; width: 50%;}
+img.equint {display: block;margin-left: 25px; margin-right: auto;width: 50%;}
+img.natbrk {display: block;margin-left: 25px; margin-right: auto;width: 50%;}
+img.qtl {display: block;margin-left: 25px; margin-right: auto;width: 50%;}
 div.heading {margin: auto; width: 90%; padding: 10px; text-align: center;}
 div.intro{ margin-left: 25px;padding: 5px;
 }
