--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-img.equint {display: block; margin-left: 25px; margin-right: auto; max-width: 50%; height: auto;}
+img.equint { margin-left: 25px; margin-right: auto; max-width: 50%; height: auto;}
 img.natbrk {display: block; margin-left: 25px; margin-right: auto; max-width: 50%; height: auto;}
 img.qtl {display: block; margin-left: 25px; margin-right: auto; max-width: 50%; height: auto;}
 div.heading {margin: auto; width: 90%; padding: 10px; text-align: center;}
