--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-img { max-width: 50%; height: auto;}
+img { display: block; margin-left: auto; margin-right: auto; max-width: 50%; height: auto;}
 
 div.heading {margin: auto; width: 90%; padding: 10px; text-align: center;}
 div.intro{ margin-left: 25px;padding: 5px;
